[tool.poetry]
name = "bastools"
version = "0.1.0"
description = ""
authors = ["bastiengrvt <bastien.grvt@proton.me>"]
readme = "README.md"
packages = [{ include = "bastools", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.10.3"
numpy = "^2.3.1"
tqdm = "^4.67.1"
scipy = "^1.16.1"
rich = "^14.1.0"
svgwrite = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

